[package]
name = "oarn-node"
version = "0.1.0"
edition = "2021"
authors = ["OARN Network Contributors"]
description = "OARN Network Node - Decentralized AI Research Infrastructure"
license = "MIT"
repository = "https://github.com/oarn-network/oarn-node"
keywords = ["ai", "decentralized", "p2p", "blockchain", "inference"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# P2P networking
libp2p = { version = "0.53", features = [
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "kad",
    "identify",
    "ping",
    "mdns",
    "dns",
    "tokio",
    "macros",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Ethereum/Blockchain
ethers = { version = "2.0", features = ["rustls", "ws"] }
ethers-contract = "2.0"

# IPFS
ipfs-api-backend-hyper = { version = "0.6", features = ["with-hyper-rustls"] }

# ONNX Runtime for AI inference
ort = { version = "2.0.0-rc.9", features = ["download-binaries"] }
ndarray = "0.16"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Cryptography
rand = "0.8"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"

# Configuration
directories = "5.0"
dotenvy = "0.15"
shellexpand = "3.1"
dirs = "5.0"
sysinfo = "0.32"

# HTTP client (for RPC discovery)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Optional: Tor support (via arti)
# arti-client = { version = "0.11", optional = true }
# tor-rtcompat = { version = "0.9", features = ["tokio"], optional = true }

[dev-dependencies]
tempfile = "3.9"
mockall = "0.12"

[features]
default = []
tor = [] # Enable when arti is added

[[bin]]
name = "oarn-node"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
